# The-Event-Engine

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
cmake/: FindGLEW.cmake  FindGLM.cmake
include/components/: ComponentFactories.h
include/core/: Actor.h  app_3d.h
include/core/PugiXML/: pugiconfig.hpp  pugixml.hpp
include/event_system/: Dispatcher.h  Provider.h  ProviderRegistry.h  Subscriber.h
include/render/: Camera.h  Renderer.h  actor.h  camera.h  renderer.h
include/render/opengl/: gl_camera.h  gl_drawable.h  gl_model.h  gl_model_store.h  opengl_renderer.h
include/util/: CrossPlatform.h  Definitions.h  Timer.h  definitions.h  game_utils.h  timer.h
include/virtual/: App.h  Component.h  Provider.h  app.h  component.h
packs/: CMakeLists.txt  README.txt
packs/BaseApp/: App3D.cpp  App3D.h  BaseApp.cpp  CMakeLists.txt
packs/BaseLoader/: BaseLoader.cpp  CMakeLists.txt
packs/BaseRenderer/: BaseRender.cpp  CMakeLists.txt
packs/BasicSDLInput/: BasicSDLInput.cpp  CMakeLists.txt
packs/EngineLogging/: CMakeLists.txt  EngineLogging.cpp
source/: CMakeLists.txt  Main.cpp  main.cpp
source/components/: ComponentFactories.cpp
source/core/: Actor.cpp  app_3d.cpp
source/core/PugiXML/: pugixml.cpp
source/event_system/: Dispatcher.cpp  ProviderRegistry.cpp
source/render/opengl/: actor_3d.cpp  gl_camera.cpp  gl_drawable.cpp  gl_model.cpp  gl_model_store.cpp  opengl_renderer.cpp
source/shaders/: SimpleFragmentShader.frag  SimpleVertexShader.vert
source/util/: Timer.cpp  timer.cpp
